...
                android:layout_height="fill_parent"
                android:background="#fdd978"
                android:gravity="right"
                android:padding="4dp"
                android:text="SRM 2"
                android:textColor="@color/darkTextColor"
                android:id="@+id/color_amt_1"/>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

...
