...
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="settings_volume">Volume</string>
    <string name="settings_weight">Weight</string>
    <string name="search">Search</string>
    <string name="srm">SRM</string>
    <string name="stats_header">Vital Statistics</string>
    <string name="stats_varies">Varies with style</string>
    <string name="textButtonMain">Ok</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_category_body">CategoryBodyActivity</string>
...
